# pipai

./: .gitignore  README.md  pipai-completion.sh  pyproject.toml
src/pipai/: __init__.py  config.py  main.py  mcp_client.py
src/pipai/config_examples/: mcp_servers.json
src/pipai/examples/: bird_enthusiast  code_explainer  json_output  markdown_output  overly_polite  setup_config.sh
